# eck-e2e-weather-platform

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.test.yml  docker-compose.yml
.claude/: features.json  lifecycle.json  project-catalog.yaml  project-constants.md  project-constitution.md  settings.json  settings.local.json
.claude/agents/: README.md  backend-architect.md  backend-designer.md  backend-developer.md  backend-qa.md  backend-reviewer.md  backend-test-developer.md  bash-developer.md  bot-developer.md  code-simplifier.md  (+21 more)
backend/: Dockerfile  config.py  main.py  pyproject.toml
backend/db/: __init__.py  postgres.py  timescale.py
backend/migrations/: alembic_postgres.ini  alembic_timescale.ini  env.py
backend/migrations/versions/postgres/: 001_initial_postgres.py
backend/migrations/versions/timescale/: 001_initial_timescale.py
backend/models/: __init__.py  postgres.py  timescale.py
backend/routers/: chat.py  health.py  metrics.py  weather.py
backend/schemas/: api.py
backend/services/: chat_service.py  metrics_service.py  weather_service.py
backend/tests/: conftest.py  test_chat_service.py  test_config.py  test_health_router.py  test_main.py  test_metrics_router.py  test_metrics_service.py  test_schemas.py  test_weather_router.py  test_weather_service.py
backend/tests/integration/: test_chat_integration.py  test_migrations.py  test_weather_integration.py
docs/: INDEX.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
infra/: README.md  deploy.sh
(+332 files in other folders)
